make sure tall images don't overflow #multi_img_pane

--- a/app/assets/stylesheets/commonwealth/show.css.scss
+++ b/app/assets/stylesheets/commonwealth/show.css.scss
@@ -132,7 +132,12 @@
 
 }
 
+#multi_img_pane {
+  margin-bottom: 20px;
+}
+
 #img_show_container {
+  height: 100%;
   width:100%;
   text-align: center;
   margin-bottom: 1em;
@@ -146,6 +151,7 @@
     border: 1px solid $light_gray;
     width:auto;
     max-width:100%;
+    height: 100%;
     max-height: 600px;
   }
 
